# study_nn

./: Makefile  README.md  diabetes.csv  pyproject.toml
nn/d2l/: ISSUE_TEMPLATE.md  README.md  Tutorials.md
nn/d2l/d2l-zh-2.0.0/pytorch/: Makefile
nn/d2l/d2l-zh-2.0.0/pytorch/chapter2_preliminaries/: ndarray.ipynb  pandas.ipynb
nn/d2l/d2l-zh-2.0.0/pytorch/chapter2_preliminaries/.ipynb_checkpoints/: linear-algebra-checkpoint.ipynb  pandas-checkpoint.ipynb
nn/d2l/d2l-zh-2.0.0/pytorch/chapter3_linear-networks/.ipynb_checkpoints/: softmax-regression-scratch-checkpoint.ipynb
nn/deep/1/: index.py
nn/divtotorch/1/: linear.py  liner.py
nn/divtotorch/2/: linear_by_pytorch.py
nn/divtotorch/3/: logic.py
nn/divtotorch/4/: logic.py
nn/divtotorch/5/: softmax.py
nn/divtotorch/6/: cnn.py
nn/divtotorch/7/: cnn.py
