[tool.poetry]
name = "nn"
version = "0.1.0"
description = ""
authors = ["buhe <bugu1986@126.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
torch = "1.12.0"
torchvision = "0.13.0"
jupyterlab = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
